[Repository reorganization]
- source from master branch moved to release/2.2 branch